# serverless-rules

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  rule.md
cfn-lint/: index.html
cfn-lint-serverless/: .flake8  Makefile  README.md  bandit.baseline  pyproject.toml
cfn-lint-serverless/cfn_lint_serverless/: __init__.py  utils.py
cfn-lint-serverless/cfn_lint_serverless/rules/: __init__.py  api_gateway.py  appsync.py  eventbridge.py  lambda_.py  sns.py  sqs.py  step_functions.py
cfn-lint-serverless/tests/: test_templates.py  test_utils.py
cfn-lint-serverless/tests/templates/: es1000-passthrough.fail.yaml  es1001-missing.fail.yaml  es1001.pass.yaml  es1005.pass.yaml  es1006.fail.yaml  es1006.pass.yaml  es1007.fail.yaml  es1007.pass.yaml  es2000-http-empty.fail.yaml  es2000-http-missing.fail.yaml  es2000-rest-empty.fail.yaml  es2000-rest-missing.fail.yaml  es2002-http-false.pass.yaml  es2002-rest-false.fail.yaml  es2002-rest-missing.fail.yaml  es2003-http-nothrottle.fail.yaml  es2003-http.pass.yaml  es2003-rest-missing.fail.yaml  es2003-rest-nodefault.fail.yaml  es2003-rest-nothrottle.fail.yaml  es2003-rest.pass.yaml  es4000-missing.fail.yaml  es4000-partial.fail.yaml  es4000.pass.yaml  es6000-multiple.pass.yaml  es6000.fail.yaml  es6000.pass.yaml  es7000.fail.yaml  es7000.pass.yaml  ws1000-missing.fail.yaml  ws1000-passthrough.fail.yaml  ws1000.pass.yaml  ws1002-permissions.fail.yaml  ws1002-sam.fail.yaml  ws1002-sub-principal.pass.yaml  ws1002.pass.yaml  ws1003-fullstar.fail.yaml  ws1003-permissions.fail.yaml  ws1003-sam.fail.yaml  ws1003-substar.pass.yaml  (+24 more)
docs/: README.md  api_gateway.md  appsync.md  cfn-lint.md  create_rule.md  eventbridge.md  index.md  lambda.md  rules.md  step_functions.md  tflint.md
examples/: Makefile
rules/: index.html
search/: search_index.json
stylesheets/: extra.css
tflint/: index.html
tflint-ruleset-aws-serverless/: .goreleaser.yml  Makefile  go.mod  go.sum  main.go  scratch_file.tf
(+119 files in other folders)
