[tool.poetry]
name = "cfn_lint_serverless"
version = "0.3.2"
description = "Serverless rules for cfn-lint"
authors = ["Amazon Web Services"]
readme = "README.md"
license = "MIT-0"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
cfn-lint = ">=0.49.2,<1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
isort = "^5.13.2"
black = "^24.8"
flake8 = "^4.0.1"
coverage = "^6.2"
flake8-variables-names = "^0.0.4"
pytest-cov = "^3.0.0"
flake8-eradicate = "^1.4.0"
flake8-bugbear = "^23.3.12"
bandit = "^1.7.10"
radon = "^6.0.1"
xenon = "^0.9.3"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | example
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
