[project]
name = "cfn_lint_serverless"
version = "0.3.3"
description = "Serverless rules for cfn-lint"
authors = [{name = "Amazon Web Service"}]
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.9.1,<4"
dependencies = [
    "cfn-lint>=1.22.3"
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "radon>=6.0.1",
    "ruff>=0.8.4",
    "xenon>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
