[project]
name = "cfn_lint_serverless"
version = "0.3.4"
description = "Serverless rules for cfn-lint"
authors = [{name = "Amazon Web Service"}]
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.10,<4"
dependencies = [
    "cfn-lint>=1.44.0"
]

[dependency-groups]
dev = [
    "bandit>=1.9.0",
    "coverage>=7.13.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.0",
    "xenon>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
